feat: add advanced topic filter modal

--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -55,6 +55,7 @@
 @import "topic-map";
 @import "topic-query-filter";
 @import "user-card";
+@import "topic-filter-modal";
 @import "user-info";
 @import "user-status-message";
 @import "user-status-picker";
