FEATURE: add advanced topic filter modal

--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -54,6 +54,7 @@
 @import "time-shortcut-picker";
 @import "topic-map";
 @import "topic-query-filter";
+@import "topic-filter-modal";
 @import "user-card";
 @import "user-info";
 @import "user-status-message";
