--- a/app/assets/stylesheets/common/components/topic-query-filter.scss
+++ b/app/assets/stylesheets/common/components/topic-query-filter.scss
@@ -30,6 +30,11 @@
     margin-right: 0.5em;
   }
 
+  &__controls {
+    display: flex;
+    gap: 0.25em;
+  }
+
   input.topic-query-filter__filter-term {
     margin: 0 0.5em 0 0;
     border-color: var(--primary-low-mid);
